--- a/decidim-core/app/cells/decidim/amendable/amenders_list/show.erb
+++ b/decidim-core/app/cells/decidim/amendable/amenders_list/show.erb
@@ -4,9 +4,15 @@
       <%= t("amended_by", scope: "decidim.amendments.amendable") %>
     </span>
   </div>
-  <% model.each do |amender| %>
-    <div class="definition-data__item expanded" id="amendment_<%= amender.id %>">
-      <%= cell "decidim/author", amender, options: { extra_classes: ["author-data--small"] }, has_actions: false %>
+  <% if model.size > 0 %>
+    <% model.each do |amender| %>
+      <div class="definition-data__item expanded" id="amendment_<%= amender.id %>">
+        <%= cell "decidim/author", amender, options: { extra_classes: ["author-data--small"] }, has_actions: false %>
+      </div>
+    <% end %>
+  <% else %>
+    <div class="definition-data__item expanded">
+      <small><%= t("no_amenders", scope: "decidim.amendments.amendable") %></small>
     </div>
   <% end %>
 </div>
