--- a/decidim-conferences/app/views/layouts/decidim/admin/conference.html.erb
+++ b/decidim-conferences/app/views/layouts/decidim/admin/conference.html.erb
@@ -83,6 +83,11 @@
                 <%= aria_selected_link_to t("conference_invites", scope: "decidim.admin.menu.conferences_submenu"), decidim_admin_conferences.conference_conference_invites_path(current_participatory_space) %>
               </li>
             <% end %>
+            <% if allowed_to? :update, :conference, conference: current_participatory_space %>
+              <li <% if is_active_link?(decidim_admin_conferences.edit_conference_diploma_path(current_participatory_space)) %> class="is-active" <% end %>>
+                <%= aria_selected_link_to t("diploma", scope: "decidim.admin.menu.conferences_submenu"), decidim_admin_conferences.edit_conference_diploma_path(current_participatory_space) %>
+              </li>
+            <% end %>
           </ul>
         </li>
       <% end %>
