working on diplomas controller

--- a/decidim-conferences/app/views/decidim/conferences/admin/diplomas/edit.html.erb
+++ b/decidim-conferences/app/views/decidim/conferences/admin/diplomas/edit.html.erb
@@ -4,13 +4,8 @@
    <div class="button--double form-general-submit">
     <%= f.submit t(".save") %>
 
-    <% if allowed_to? :send_diplomas, :conference, conference: current_participatory_space %>
-      <%# if current_conference.published? %>
-        <%#= link_to t("actions.unpublish", scope: "decidim.admin"), conference_publish_path(current_conference), method: :delete, class: "button muted" %>
-      <%# else %>
-        <%#= link_to t("actions.publish", scope: "decidim.admin"), conference_publish_path(current_conference), method: :post, class: "button hollow" %>
-      <%# end %>
-      GÑAÑAÑAÑÑA
+    <% if allowed_to?(:send_diplomas, :conference, conference: current_participatory_space ) && current_participatory_space.sign_date.present? %>
+      <%= link_to t("actions.send_diplomas", scope: "decidim.admin"), conference_send_diploma_path(current_conference), method: :post, class: "button hollow" %>
     <% end %>
   </div>
 <% end %>
