--- a/decidim-conferences/app/views/decidim/conferences/admin/diplomas/_form.html.erb
+++ b/decidim-conferences/app/views/decidim/conferences/admin/diplomas/_form.html.erb
@@ -19,13 +19,13 @@
   <div class="card-section">
     <div class="row">
       <div class="columns xlarge-6">
-        <%= form.upload :main_logo %>
+        <%= form.upload :main_logo, optional: false %>
       </div>
     </div>
 
     <div class="row">
       <div class="columns xlarge-6">
-        <%= form.upload :signature %>
+        <%= form.upload :signature, optional: false %>
       </div>
     </div>
     <div class="row column">
