--- a/decidim-conferences/app/views/decidim/conferences/admin/diplomas/_form.html.erb
+++ b/decidim-conferences/app/views/decidim/conferences/admin/diplomas/_form.html.erb
@@ -2,17 +2,9 @@
   <div class="card-divider">
     <h2 class="card-title">
       <%= title %>
-      <%#= link_to t(".invites"), meeting_registrations_invites_path(meeting), class: "button tiny button--title #{'disabled' unless allowed_to? :read_invites, :meeting, meeting: meeting}" %>
-      <%# if allowed_to? :export_registrations, :meeting, meeting: meeting %>
-        <span class="exports dropdown tiny button button--simple button--title" data-toggle="export-dropdown"><%#= t "actions.export", scope: "decidim.admin" %></span>
-        <div class="dropdown-pane" id="export-dropdown" data-dropdown data-auto-focus="true" data-close-on-click="true">
-          <ul class="vertical menu add-components">
-            <%# %w{CSV JSON Excel}.each do |format| %>
-              <li class="exports--format--<%#= format.downcase %> exports--registrations"><%#= link_to t("decidim.admin.exports.export_as", name: t("decidim.#{current_component.manifest.name}.admin.exports.registrations"), export_format: format), export_meeting_registrations_path(meeting_id: meeting, format: format) %></li>
-            <%# end %>
-          </ul>
-        </div>
-      <%# end %>
+      <% if allowed_to?(:send_diplomas, :conference, conference: current_participatory_space ) && current_participatory_space.sign_date.present? %>
+        <%= link_to t("actions.send_diplomas", scope: "decidim.admin"), send_conference_diploma_path(current_conference), method: :post, class: "button tiny button--title new #{"disabled" if current_participatory_space.diploma_sent? }" %>
+      <% end %>
     </h2>
   </div>
 
