--- a/decidim-meetings/app/views/decidim/meetings/meetings/show.html.erb
+++ b/decidim-meetings/app/views/decidim/meetings/meetings/show.html.erb
@@ -117,6 +117,7 @@ edit_link(
 </div>
 <%= attachments_for meeting %>
 <%= comments_for meeting %>
+<%= pad_iframe_for meeting %>
 
 <%= javascript_include_tag "decidim/proposals/social_share" %>
 <%= stylesheet_link_tag "decidim/proposals/social_share" %>
